// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Message A message query 1`] = `
<div>
   - 
</div>
`;

exports[`Storyshots Mutation A mutation component 1`] = `
<button
  onClick={[Function]}
>
  Click to mutate
</button>
`;

exports[`Storyshots Random Number A random number query 1`] = `<div />`;

exports[`Storyshots Variables List of messages 1`] = `<div />`;

exports[`Storyshots Variables Mutation of messages 1`] = `
<button
  onClick={[Function]}
>
  Click to mutate message n°
  1
</button>
`;
